unpackaged/objects/Pharma_Product__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name1__c</fullName>
        <label>Product Name1</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Pharma Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Pro-{0}</displayFormat>
        <label>Product Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharma Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>